# pixiis

./: .gitignore  BUILD.md  CHANGELOG.md  DESIGN_SPEC.md  README.md  SMOKE.md  build.sh  package-lock.json  package.json  pixiis.spec  pyproject.toml  requirements.txt  setup.py
agents/: CONTEXT.md  CONTEXT_WAVE2.md  STATUS.md  launch.sh  launch_wave2.sh  pane1-whisper.md  pane2-kokoro.md  pane3-uwp.md  pane4-baseline.md  pane5-tauri.md  pane6-design.md  pane7-types.md  pane8-controller.md  pane9-services.md  wave2-pane0-chrome.md  wave2-pane1-voice.md  wave2-pane2-tts.md  wave2-pane3-scanners.md  wave2-pane4-xbox.md  wave2-pane5-settings.md  wave2-pane6-onboarding.md  wave2-pane7-files.md  wave2-pane8-library-polish.md  wave2-pane8-review.md  wave3-design-audit.md  wave3-final-report.md  wave3-frontend-audit.md  wave3-review.md  wave3-rust-audit.md  wave3-scan-fix.md  wave3-settings-onboarding-audit.md  wave3-ux-audit.md  wave3-whisper-fix.md  wave3-xbox-fix.md  wave4-bonus-features.md  wave4-final-report.md  wave5-final-report.md  wave5-ux-research.md  wave6-uwp-research.md  wave6-xbox-audit.md
examples/: launcher_skeleton.py  shout.py
frontend/: package-lock.json  package.json
frontend/src/: index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: error.rs  lib.rs  types.rs
frontend/src-tauri/src/commands/: config.rs  controller.rs  library.rs  mod.rs  services.rs  voice.rs
frontend/src-tauri/src/controller/: backend.rs
frontend/src-tauri/src/services/: mod.rs  oauth.rs  twitch.rs  vibration.rs  youtube.rs
frontend/src/api/: bridge.ts
frontend/src/api/types/: ActionKind.ts  AxisEvent.ts  ControllerEvent.ts  Direction.ts  MacroAction.ts  NavigationEvent.ts  Playtime.ts  RawgGameData.ts  TranscriptionEvent.ts  VoiceDevice.ts
frontend/src/components/: GameTile.css  NavBar.css  SearchBar.css
frontend/src/hooks/: useController.ts  useSpatialNav.ts
frontend/src/pages/: HomePage.css
frontend/src/styles/: animations.css  theme.css
resources/: default_config.toml
resources/models/kokoro/: README.md
resources/models/silero/: README.md
resources/models/whisper/: README.md
resources/themes/: dark_gaming.qss
scratch/: _check.bat  _envtest.bat  _verify.bat  controller_draft.md  services_deps.md
scratch/controller_verify/: Cargo.toml
scratch/controller_verify/src/: lib.rs  main.rs
scratch/scanners_verify/: Cargo.toml
scratch/scanners_verify/src/: lib.rs
scratch/scanners_verify/tests/: fixtures
scratch/services_draft/: image_loader.rs  mod.rs  oauth.rs  rawg.rs  twitch.rs  vibration.rs  youtube.rs
scratch/xbox_verify/: Cargo.toml
scratch/xbox_verify/src/: lib.rs
scripts/: batch_process.py  build.py  mic_live.py  perf.ps1  test_impl.py
spike/: baseline_results.json  baseline_runner.py  baselines.md  sustained_clean.json
spike/kokoro-bench/: .gitignore  Cargo.toml  RESULTS.md
spike/kokoro-bench/scripts/: compare_wavs.py  run_python_baseline.py
spike/kokoro-bench/src/: espeak.rs  main.rs  vocab.rs  voices.rs
spike/uwp-detect/: .gitignore  Cargo.toml  RESULTS.md  _baseline.ps1  _bench.ps1  _build.bat
spike/uwp-detect/src/: main.rs
spike/whisper-bench/: .gitignore  Cargo.toml  README.md  RESULTS.md
spike/whisper-bench/scripts/: build.bat  build.sh
spike/whisper-bench/src/: main.rs
src/: App.css  App.tsx  __init__.py  index.css  transcribe.py
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: config.rs  library.rs  mod.rs  services.rs  system.rs  voice.rs
src-tauri/src/controller/: backend.rs  macros.rs  mapping.rs  mod.rs
src-tauri/src/services/: image_loader.rs  rawg.rs  twitch.rs
src-tauri/src/voice/: audio_capture.rs  mod.rs  model.rs  pipeline.rs  text_injection.rs  transcriber.rs  tts.rs  vad.rs
src-tauri/tests/fixtures/startmenu/: game.lnk  iron-heart.lnk
src/api/: ActionFooterContext.tsx  LibraryContext.tsx  ToastContext.tsx  UiPrefsContext.tsx  bridge.ts
src/api/types/: AppEntry.ts  AppSource.ts  ButtonState.ts  ControllerState.ts  MacroMode.ts  ProviderReport.ts  ProviderState.ts  RunningGame.ts  ScanResult.ts  TwitchStream.ts  YouTubeTrailer.ts
src/components/: ActionFooter.css  ActionFooter.tsx  GameTile.css  GameTile.tsx  HomeGreeting.css  HomeGreeting.tsx  NavBar.css  NavBar.tsx  NowPlaying.css  NowPlaying.tsx  QuickResume.css  QuickResume.tsx  QuickSearch.css  QuickSearch.tsx  ScanProgress.tsx  SearchBar.css  SearchBar.tsx  ShortcutsCheatSheet.css  ShortcutsCheatSheet.tsx  Toast.css  Toast.tsx  VirtualKeyboard.css  VirtualKeyboard.tsx  VoiceOverlay.css  VoiceOverlay.tsx  scanProgressState.ts
src/hooks/: useAutoFocus.ts  useBigPicture.ts  useBumperNav.ts  useController.ts  useSpatialNav.ts  useVoiceTrigger.ts
src/pages/: FileManagerPage.css  FileManagerPage.tsx  GameDetailPage.css  GameDetailPage.tsx  HomePage.css  HomePage.tsx  LibraryPage.css  LibraryPage.tsx  OnboardingPage.css  OnboardingPage.tsx  SettingsPage.css  SettingsPage.tsx
src/pixiis/: __init__.py  __main__.py
src/pixiis/controller/: __init__.py  backend.py  macros.py  mapping.py
src/pixiis/core/: __init__.py  config.py  events.py  paths.py  types.py
src/pixiis/daemon/: __init__.py  autostart.py  ipc.py  service.py
src/pixiis/services/: __init__.py  image_loader.py  oauth.py  rawg.py  theme.py  twitch.py  vibration.py  youtube.py
src/pixiis/ui/: __init__.py  app.py  controller_bridge.py  main_window.py  page_stack.py
src/pixiis/ui/pages/: __init__.py  file_manager_page.py  home_page.py  library_page.py  (+2 more)
src/pixiis/voice/: __init__.py  audio_capture.py  pipeline.py  text_injection.py  transcriber.py  tts.py  vad.py
src/styles/: PALETTE.md  animations.css  tokens.css
src/transcriptions/: core.py  transcriber.py
tests/: conftest.py  test_cache.py  test_config.py  test_events.py  test_registry.py  test_transcriber.py  test_types.py
(+15 files in other folders)
