[package]
name = "kokoro-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "kokoro-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hound = "3.5"
ndarray = "0.16"
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "load-dynamic", "cuda"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
byteorder = "1"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
