[package]
name = "uwp-detect"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "uwp-detect"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
  "Management_Deployment",
  "ApplicationModel",
  "ApplicationModel_Core",
  "ApplicationModel_AppExtensions",
  "Foundation",
  "Foundation_Collections",
  "Storage",
  "Win32_System_Com",
] }
quick-xml = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
