[package]
name = "whisper-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
whisper-rs = { version = "0.13", default-features = false }
hound = "3.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memory-stats = "1.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
